# tinychain

./: .gitignore  README.md  apt-requirements.txt
example/: .gitignore  CMakeLists.txt  README.md  main.c
tinychain/: .gitignore  CMakeLists.txt  README.md  tinychain.env
tinychain/arch/: common.cmake  syscall.h
tinychain/arch/aarch64/: CMakeLists.txt  crt0.s  syscall.h  tinychain.cmake
tinychain/arch/arm/: CMakeLists.txt  crt0.s  syscall.h  tinychain.cmake
tinychain/arch/i386/: CMakeLists.txt  crt0.s  linker.ld  syscall.c  syscall.h  tinychain.cmake
tinychain/arch/x86_64/: CMakeLists.txt  crt0.s  linker.ld  syscall.c  syscall.h  tinychain.cmake
tinychain/cmake/: TinychainConfig.cmake.in
tinychain/libc/: CMakeLists.txt
tinychain/libc/include/bits/: fcntl.h  heap.h  math.h  mman.h  ptrace.h  resource.h  signal.h  socket.h  splice.h  stat.h  sysinfo.h  time.h  unistd.h
tinychain/libc/include/fs/: access.h  chdir.h  close.h  fchdir.h  fstat.h  ftruncate.h  getcwd.h  lseek.h  lstat.h  mkdir.h  open.h  rename.h  rmdir.h  stat.h  truncate.h  unlink.h
tinychain/libc/include/io/: dup.h  dup2.h  dup3.h  puts.h  read.h  splice.h  tee.h  vmsplice.h  write.h
tinychain/libc/include/math/: ceil.h  floor.h
tinychain/libc/include/mem/: brk.h  calloc.h  free.h  malloc.h  mlock.h  mmap.h  mprotect.h  mremap.h  msync.h  munlock.h  munmap.h  realloc.h
tinychain/libc/include/net/: accept.h  bind.h  connect.h  getpeername.h  getsockname.h  getsockopt.h  listen.h  recvfrom.h  sendto.h  setsockopt.h  shutdown.h  socket.h
tinychain/libc/include/proc/: getegid.h  geteuid.h  getgid.h  getpid.h  getppid.h  getuid.h  setgid.h  setuid.h
tinychain/libc/include/string/: memchr.h  memcmp.h  memcpy.h  memset.h  strcat.h  strchr.h  strcmp.h  strcpy.h  strcspn.h  strdup.h  strlen.h  strncat.h  strncmp.h  strrchr.h  strspn.h  strstr.h
tinychain/libc/include/sys/: getrlimit.h  getrusage.h  kill.h  ptrace.h  setrlimit.h  sigaction.h  sigprocmask.h  sysinfo.h  uname.h
tinychain/libc/include/thread/: exit.h  fork.h  wait.h  wait4.h  waitpid.h
tinychain/libc/include/time/: clock_gettime.h  gettimeofday.h  nanosleep.h  time.h
tinychain/libc/include/util/: atoi.h  atol.h  ctype.h  itoa.h  strtol.h  strtoull.h  tolower.h  toupper.h
tinychain/libc/src/: CMakeLists.txt
tinychain/libc/src/fs/: access.c  chdir.c  close.c  fchdir.c  fstat.c  ftruncate.c  getcwd.c  lseek.c  lstat.c  mkdir.c  open.c  rename.c  rmdir.c  stat.c  truncate.c  unlink.c
tinychain/libc/src/io/: dup.c  dup2.c  dup3.c  puts.c  read.c  splice.c  tee.c  write.c
tinychain/libc/src/math/: ceil.c  floor.c
tinychain/libc/src/mem/: brk.c  calloc.c  free.c  malloc.c  mlock.c  mmap.c  mprotect.c  mremap.c  msync.c  munlock.c  munmap.c  realloc.c
tinychain/libc/src/net/: accept.c  bind.c  connect.c  getpeername.c  getsockname.c  getsockopt.c  listen.c  recvfrom.c  sendto.c  setsockopt.c  shutdown.c  socket.c
tinychain/libc/src/proc/: getegid.c  geteuid.c  getgid.c  getpid.c  getppid.c  getuid.c  setgid.c  setuid.c
tinychain/libc/src/string/: memchr.c  memcmp.c  memcpy.c  memset.c  strcat.c  strchr.c  strcmp.c  strcpy.c  strcspn.c  strdup.c  strlen.c  strncat.c  strncmp.c  strrchr.c  strspn.c  strstr.c
tinychain/libc/src/sys/: getrlimit.c  getrusage.c  kill.c  ptrace.c  setrlimit.c  sigaction.c  sigprocmask.c  sysinfo.c  uname.c
tinychain/libc/src/thread/: exit.c  fork.c  wait.c  wait4.c  waitpid.c
tinychain/libc/src/time/: clock_gettime.c  gettimeofday.c  nanosleep.c  time.c
tinychain/libc/src/util/: atoi.c  atol.c  ctype.c  itoa.c  strtol.c  strtoull.c  tolower.c  toupper.c
